# ds-homework

./: .clang-format  .clang-tidy  .editorconfig  Makefile  build.sh  format.sh  meson.build
1-RationalNumber/: RationalNumber.h  main.cpp
1-RationalNumber/Tests/: Test0.h  Test1.h  Test2.h  Test3.h  Test4.h  Test5.h  Test6.h  Test7.h  Test8.h
2-Vector/: Vector.h  main.cpp
2-Vector/Tests/: 10SwapTest.h  11SubscriptOperatorTest.h  12DestructorCallTest.h  13EmplaceBackTest.h  14ClassWithoutDefaultConstructorTest.h  15ClassWithoutCopyConstructorTest.h  16MoveConstructorAndMoveAssignmentOperatorTest.h  1BasicConstructorsTest.h  2InitializerListConstructorTest.h  3PushBackTest.h  4PopBackTest.h  5ClearTest.h  6CopyConstructorTest.h  7AssignmentOperatorTest.h  8AccessFunctionsTest.h  9ReserveAndShrinkToFitTest.h
3-ForwardList/: ForwardList.h  main.cpp
3-ForwardList/Tests/: 10ClearTest.h  11BasicIteratorTest.h  12ConstIteratorTest.h  13MemberAccessIteratorTest.h  14InitializerListConstructorTest.h  15IteratorConstructibleTest.h  16ClassWithNoDefaultConstructorTest.h  17InsertTest.h  18EraseTest.h  19StlCompatibilityTest.h  1BasicConstructorsTest.h  2PushFrontTest.h  3PopFrontTest.h  4DestructorCallTest.h  5CopyConstructorTest.h  6AssignmentOperatorTest.h  7DestructorWithAssignmentTest.h  8EmplaceFrontTest.h  9FrontTest.h
4-List/: List.h  main.cpp
4-List/Tests/: 10BasicIteratorTest.h  11ReverseIteratorTest.h  12ConstIteratorTest.h  13ConstReverseIteratorTest.h  (+18 more)
5-Set/: Set.cpp  Set.h  main.cpp
6-Heap/: HeapFunctions.h  main.cpp
Common/: CustomAsserts.h
(+22 files in other folders)
